tests/parser/package.4.bad.error
error: Malformed package declaration
  --> test:2:22
   |
 2 |  (package test-package 1)
   |                        ^ malformed package clause
